--- a/src/PreservaView/MainWindowUI.form
+++ b/src/PreservaView/MainWindowUI.form
@@ -353,18 +353,8 @@
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Lucida Grande" size="11" style="1"/>
                         </Property>
-                        <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                          <Table columnCount="9" rowCount="0">
-                            <Column editable="true" title="Insamlingsnummer" type="java.lang.Object"/>
-                            <Column editable="true" title="Kundnamn" type="java.lang.Object"/>
-                            <Column editable="true" title="Startdatum" type="java.lang.Object"/>
-                            <Column editable="true" title="Dom&#xe4;n" type="java.lang.Object"/>
-                            <Column editable="true" title="Status" type="java.lang.Object"/>
-                            <Column editable="true" title="Kommentar" type="java.lang.Object"/>
-                            <Column editable="true" title="URL" type="java.lang.Object"/>
-                            <Column editable="true" title="Rapport" type="java.lang.Object"/>
-                            <Column editable="true" title="Starta insamling" type="java.lang.Object"/>
-                          </Table>
+                        <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                          <Connection code="new javax.swing.table.DefaultTableModel(&#xa;    new Object [][] {&#xa;&#xa;    },&#xa;    new String [] {&#xa;        &quot;Insamlingsnummer&quot;, &quot;Kundnamn&quot;, &quot;Startdatum&quot;, &quot;Dom&#xe4;n&quot;, &quot;Status&quot;, &quot;Kommentar&quot;, &quot;URL&quot;, &quot;Rapport&quot;, &quot;Starta insamling&quot;&#xa;    }&#xa;){public boolean isCellEditable(int row, int column){return false;}}" type="code"/>
                         </Property>
                         <Property name="toolTipText" type="java.lang.String" value=""/>
                         <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -533,7 +523,6 @@
                                           <Component id="txtInsamlingsdoman" alignment="3" min="-2" max="-2" attributes="0"/>
                                           <Component id="lblAddDoman" alignment="3" min="-2" max="-2" attributes="0"/>
                                       </Group>
-                                      <EmptySpace max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Group type="102" attributes="0">
                                               <Group type="103" groupAlignment="3" attributes="0">
