--- a/src/PreservaView/MainWindowUI.form
+++ b/src/PreservaView/MainWindowUI.form
@@ -260,7 +260,7 @@
                         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                           <Color blue="23" green="b0" red="94" type="rgb"/>
                         </Property>
-                        <Property name="text" type="java.lang.String" value="Levererade"/>
+                        <Property name="text" type="java.lang.String" value="Levererad"/>
                       </Properties>
                       <Events>
                         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSortLevereradeActionPerformed"/>
